<resources>
    <string name="app_name">Article</string>
    <string name="search_btn">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search…</string>
    <string name="test">TEST</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="poster_image">Poster Image</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="save">Save</string>
    <string name="arts">Arts</string>
    <string name="fashion_amp_style">Fashion &amp; Style</string>
    <string name="sports">Sports</string>

    <string name="arts_query">"Arts"</string>
    <string name="fashion_amp_style_query">"Fashion &amp; Style"</string>
    <string name="sports_query">"Sports"</string>

    <string-array name="sort_order_values">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <string-array name="news_desk">
        <item>Arts</item>
        <item>Fashion &amp; Style</item>
        <item>Sports</item>
    </string-array>
</resources>